# agent-middleware-api

./: .dockerignore  .env.example  .env.production  .env.production.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEMO_SCRIPT.md  DESIGN_PARTNER_GUIDE.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SECURITY_LIMITATIONS.md  TRUST_MODEL.md  WEDGE.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject.toml  railway.json  requirements.txt  ruff.toml  test.db
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-pr.yml  ci.yml  docker-publish.yml
.opencode/plans/: PHASE9_BLUEPRINT.md  PHASE9_DOT1_DISCOVERABILITY.md
app/: __init__.py  main.py
app/audit/: __init__.py  lightweight.py
app/core/: api_surface.py  auth.py  blob.py  config.py  dependencies.py  durable_state.py  health.py  rate_limiter.py  replay_protection.py  resilience.py  runtime_mode.py  tenant_validation.py  time.py  trust_mode.py  url_guard.py
app/db/: __init__.py  converters.py  database.py  models.py
app/optimizer/: candidates.py  planner.py  policy.py
app/policy/: __init__.py  decisions.py
app/routers/: admin.py  agent_comms_auth.py  agent_comms_durable.py  ai.py  api_keys.py  audit.py  awi.py  awi_enhanced.py  awi_well_known.py  billing.py  broadcast.py  comms.py  content_generation.py  dashboard.py  discover.py  docs.py  evidence.py  factory.py  iot.py  keys.py  kyc.py  launch.py  mcp.py  me.py  media.py  oracle.py  permits.py  planner.py  policies.py  preflight.py  protocol.py  receipts.py  red_team.py  rtaas.py  sandbox.py  sandbox_behavioral.py  static.py  telemetry.py  telemetry_scope.py  trust_readiness.py  (+2 more)
app/schemas/: audit.py  awi.py  awi_enhanced.py  billing.py  content_factory.py  content_generation.py  iot.py  media.py  optimizer.py  oracle.py  policies.py  red_team.py  sandbox_behavioral.py  telemetry.py  trust.py
app/services/: AGENTS.md  agent_comms.py  agent_comms_store.py  agent_intelligence.py  agent_money.py  api_key_service.py  audit_chain.py  audit_log.py  awi_action_vocab.py  (+42 more)
b2a_sdk/: README.md  __init__.py  client.py  decorators.py  edge_client.py  mcp.py  pyproject.toml
b2a_sdk/tests/: __init__.py  test_sdk.py
docs/: PHASE0_DELIVERABLES.md  agent-recipes.md  agentmarket-listing.md  agentmarket-submission.md  awi-action-vocabulary-spec.md  awi-adoption-guide.md  demo-instance.md  demo-trust-plane-output.md  golden-path.md  human-onboarding.md  key-management.md  llm.txt  mcp-registry-submission.md  mcp-tool-metadata-spec.md  openapi.json  production-beta-roadmap.md  regengine-governed-tool-demo.md  related-work.md  repo-review-2026-07-07.md  sim-inventory.json  simulations-inventory.md  threat-model.md  x-announcement-thread.md
examples/: dry_run_example.py  mcp_tool_example.py
framework_integrations/: README.autogen.md  README.crewai.md  README.langgraph.md  README.llamaindex.md  __init__.py  client.py  tools.py
migrations/: env.py
scripts/: agent_ops_war_room_demo.py  auto_pr_runner.py  awi_representation_benchmark.py  core_quality_gate.sh  demo_regengine_bridge.py  demo_trust_plane.py  docker_entrypoint.sh  export_openapi.py  generate_sim_inventory.py  human_preflight.sh  red_team_trust_plane.py  trust_coverage_gate.sh  trust_release_gate.sh
static/: llm.txt
tests/: AGENTS.md  conftest.py  test_agent_comms_durable.py  test_agent_first_contract.py  test_agent_ops_war_room_demo.py  test_agent_url_and_input_hardening.py  test_api_keys.py  test_api_surface.py  test_api_surface_routing.py  test_audit.py  test_audit_chain.py  test_audit_log.py  test_audit_routes.py  test_awi.py  test_awi_adoption.py  test_awi_dom_bridge_integration.py  test_awi_phase9.py  test_behavioral_sandbox.py  test_billing.py  test_blob.py  test_broadcast.py  test_comms.py  test_content_factory_generation_durable.py  test_content_store.py  test_dashboard.py  test_demo_trust_plane.py  test_discover_phase9.py  test_discovery.py  test_discovery_consistency.py  test_discovery_drift.py  test_evidence_bundle.py  test_factory.py  test_genesis.py  test_golden_path.py  test_governed_adapter.py  test_health_dependencies.py  test_health_sim_parity.py  test_idempotency.py  test_iot.py  test_iot_registry.py  (+53 more)
wrappers/autogen-agent-middleware/: README.md  pyproject.toml
wrappers/autogen-agent-middleware/src/autogen_b2a/: __init__.py  client.py  tool.py
wrappers/crewai-agent-middleware/: README.md  pyproject.toml
wrappers/crewai-agent-middleware/src/crewai_b2a/: __init__.py  client.py  tool.py
(+50 files in other folders)
