[project]
name = "agent-native-middleware"
version = "1.0.0"
description = "Headless middleware API for the Business-to-Agent (B2A) economy"
requires-python = ">=3.11"

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
playwright = ["playwright>=1.40.0"]
browser = ["playwright>=1.40.0"]
webauthn = ["webauthn>=1.0.0"]
chromadb = ["chromadb>=0.4.0"]
rag = ["chromadb>=0.4.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
