[project]
name = "agent-native-middleware"
version = "1.2.0"
description = "Operational control plane for autonomous agents"
requires-python = ">=3.11"

[project.optional-dependencies]
mcp = ["mcp>=1.28.0,<2"]
playwright = ["playwright>=1.40.0"]
browser = ["playwright>=1.40.0"]
webauthn = ["webauthn>=1.0.0"]
chromadb = ["chromadb>=0.4.0"]
rag = ["chromadb>=0.4.0"]
observability = ["structlog>=24.1.0"]
resilience = ["tenacity>=8.0.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "proof: exercises an example proof-surface workload, not the trust-plane product. Skipped by `make test`; run the full suite with `make test-all`.",
]
filterwarnings = [
    # Pydantic v2 calls the deprecated datetime.utcnow() internally
    # (pydantic/_internal/_fields.py), emitting ~1,600 warnings that bury real
    # signal. Scoped to pydantic so any utcnow reintroduction in our own code
    # still surfaces.
    "ignore::DeprecationWarning:pydantic._internal._fields",
]
