[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "b2a-sdk"
version = "0.2.0"
description = "Python SDK for the Agent-Native Middleware API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Agent-Native Middleware", email = "dev@agentnative.io" }
]
keywords = [
    "agent",
    "ai",
    "middleware",
    "billing",
    "telemetry",
    "b2a",
    "swarm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/agent-native/agent-middleware-api"
Documentation = "https://docs.agentnative.io"
Repository = "https://github.com/agent-native/agent-middleware-api"
Changelog = "https://github.com/agent-native/agent-middleware-api/blob/main/b2a_sdk/CHANGELOG.md"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
