[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewai-agent-middleware"
version = "0.1.0"
description = "CrewAI integration for Agent Middleware API (MCP + AWI)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.1.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/crewai_b2a"]
